--- a/web/css/frontend.css
+++ b/web/css/frontend.css
@@ -1,122 +1,119 @@
-html,
-body {
-    height: 100%;
+html, body {
+	height: 100%;
 }
 
 .wrap {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
+	min-height: 100%;
+	height: auto;
+	margin: 0 auto -60px;
+	padding: 0 0 60px;
 }
 
-.wrap > .container {
-    padding: 70px 15px 20px;
+.wrap>.container {
+	padding: 70px 15px 20px;
 }
 
 .footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
+	height: 60px;
+	background-color: #f5f5f5;
+	border-top: 1px solid #ddd;
+	padding-top: 20px;
 }
 
 .jumbotron {
-    text-align: center;
-    background-color: transparent;
+	text-align: center;
+	background-color: transparent;
 }
 
 .jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+	font-size: 21px;
+	padding: 14px 24px;
 }
 
 .not-set {
-    color: #c55;
-    font-style: italic;
+	color: #c55;
+	font-style: italic;
 }
 
 /* add sorting icons to gridview sort links */
 a.asc:after, a.desc:after {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
+	position: relative;
+	top: 1px;
+	display: inline-block;
+	font-family: 'Glyphicons Halflings';
+	font-style: normal;
+	font-weight: normal;
+	line-height: 1;
+	padding-left: 5px;
 }
 
 a.asc:after {
-    content: /*"\e113"*/ "\e151";
+	content: /*"\e113"*/ "\e151";
 }
 
 a.desc:after {
-    content: /*"\e114"*/ "\e152";
+	content: /*"\e114"*/ "\e152";
 }
 
 .sort-numerical a.asc:after {
-    content: "\e153";
+	content: "\e153";
 }
 
 .sort-numerical a.desc:after {
-    content: "\e154";
+	content: "\e154";
 }
 
 .sort-ordinal a.asc:after {
-    content: "\e155";
+	content: "\e155";
 }
 
 .sort-ordinal a.desc:after {
-    content: "\e156";
+	content: "\e156";
 }
 
-.grid-view td {
-    white-space: nowrap;
+.grid-view th {
+	white-space: nowrap;
 }
 
-.grid-view .filters input,
-.grid-view .filters select {
-    min-width: 50px;
+.grid-view .filters input, .grid-view .filters select {
+	min-width: 50px;
 }
 
 .hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
+	display: block;
+	margin-top: 5px;
+	color: #999;
 }
 
 .error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
+	color: #a94442;
+	background: #fdf7f7;
+	border-left: 3px solid #eed3d7;
+	padding: 10px 20px;
+	margin: 0 0 15px 0;
 }
 
 /* align the logout "link" (button in form) of the navbar */
-.nav li > form > button.logout {
-    padding: 15px;
-    border: none;
+.nav li>form>button.logout {
+	padding: 15px;
+	border: none;
 }
 
-@media(max-width:767px) {
-    .nav li > form > button.logout {
-        display:block;
-        text-align: left;
-        width: 100%;
-        padding: 10px 15px;
-    }
+@media ( max-width :767px) {
+	.nav li>form>button.logout {
+		display: block;
+		text-align: left;
+		width: 100%;
+		padding: 10px 15px;
+	}
 }
 
-.nav > li > form > button.logout:focus,
-.nav > li > form > button.logout:hover {
-    text-decoration: none;
+.nav>li>form>button.logout:focus, .nav>li>form>button.logout:hover {
+	text-decoration: none;
 }
 
-.nav > li > form > button.logout:focus {
-    outline: none;
+.nav>li>form>button.logout:focus {
+	outline: none;
 }
 
 /* Author：mingyuhisoft@163.com
@@ -227,7 +224,7 @@ a.desc:after {
 }
 
 .page-header {
-	margin:23px 0 20px;
+	margin: 23px 0 20px;
 }
 
 .navbar-inverse .navbar-brand {
@@ -235,12 +232,34 @@ a.desc:after {
 }
 
 .transform180 {
-transform: rotate(180deg);
--o-transform: rotate(180deg);
--webkit-transform: rotate(180deg);
--moz-transform: rotate(180deg);
+	transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
 }
 
-.app-intro{
+.text-overflow {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.app-intro {
 	margin-bottom: 40px;
+}
+
+#fixed-table-header {
+	background:#fff;
+}
+#fixed-table-header.affix {
+	top:50px;
+	z-index:999;
+	width:1140px;
+}
+
+#fixed-table-header.affix-top {
+}
+
+#fixed-table-header.affix -bottom{
+	
 }
